# cffi-ft

./: MANIFEST.in  README.md  pyproject.toml  setup.py  setup_base.py
.github/workflows/: ci.yaml
demo/: _curses_build.py  _curses_setup.py  api.py  bsdopendirtype_build.py  bsdopendirtype_setup.py  btrfs-snap.py  cffi-cocoa.py  embedding.py  extern_python.py  extern_python_varargs.py  fastcsv.py  gmp_build.py  manual2.py  pwuid_build.py  readdir2_build.py  readdir_build.py  readdir_setup.py  recopendirtype_build.py  winclipboard_build.py  xclient_build.py
doc/source/: cdef.rst  embedding.rst  overview.rst  using.rst  whatsnew.rst
src/c/: _cffi_backend.c  call_python.c  cglob.c  ffi_obj.c  lib_obj.c  minibuffer.h  misc_thread_common.h  parse_c_type.c  realize_c_type.c  test_c.py
src/cffi/: api.py  backend_ctypes.py  recompiler.py  verifier.py
src/cffi_ft/: _cffi_include.h  _embedding.h  api.py  commontypes.py  error.py  ffiplatform.py  model.py  recompiler.py  setuptools_ext.py  vengine_cpy.py
testing/: support.py
testing/cffi0/: backend_tests.py  callback_in_thread.py  test_cdata.py  test_ctypes.py  test_ffi_backend.py  test_function.py  test_model.py  test_ownlib.py  test_parsing.py  test_platform.py  test_unicode_literals.py  test_verify.py  test_verify2.py  test_version.py  test_vgen.py  test_vgen2.py  test_zdistutils.py  test_zintegration.py
testing/cffi1/: test_cffi_binary.py  test_commontypes.py  test_dlopen.py  test_ffi_obj.py  test_function_args.py  test_new_ffi_1.py  test_parse_c_type.py  test_pkgconfig.py  test_re_python.py  test_realize_c_type.py  test_recompiler.py  test_unicode_literals.py  test_verify1.py  test_zdist.py
testing/embedding/: add1.py  add2.py  add3.py  empty.py  (+6 more)
tools/: version.py
(+4 files in other folders)
