[build-system]
requires = [
    # first version that supports Python 3.12; older versions may work
    # with previous Python versions, but are not tested
    "setuptools >= 66.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "cffi-ft"
version = "1.18.0.dev0"
dependencies = [
    "pycparser; implementation_name != 'PyPy'",
]
# use CFFI upstream for older Python versions or on PyPy
requires-python = ">=3.13"

description = "Foreign Function Interface for Python calling C code."
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading :: 2 - Beta",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
authors = [
    {name = "Armin Rigo"},
    {name = "Maciej Fijalkowski"},
]
maintainers = [
    {name = "Matt Davis"},
    {name = "Matt Clay"},
]

[project.entry-points."distutils.setup_keywords"]
cffi_ft_modules = "cffi_ft.setuptools_ext:cffi_ft_modules"

[project.urls]
Documentation = "https://cffi.readthedocs.io/"
Changelog = "https://cffi.readthedocs.io/en/latest/whatsnew.html"
Downloads = "https://github.com/Quansight-Labs/cffi-ft/releases"
Contact = "https://groups.google.com/forum/#!forum/python-cffi"
"Source Code" = "https://github.com/Quansight-Labs/cffi-ft"
"Issue Tracker" = "https://github.com/Quansight-Labs/cffi-ft/issues"
